// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'focus', eventOut: 'blur' }, leave with %s element 1`] = `
<mg-tooltip>
  <!---->
  <span aria-describedby="identifier" tabindex="0">
    span
  </span>
  <div class="mg-tooltip" data-show id="identifier" role="tooltip" style="position: absolute; left: 0; top: 0; margin: 0;">
    blu
    <div class="mg-tooltip__arrow" data-popper-arrow style="position: absolute;"></div>
  </div>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'focus', eventOut: 'blur' }, leave with %s element 2`] = `
<mg-tooltip>
  <!---->
  <button aria-describedby="blu identifier">
    button
  </button>
  <div class="mg-tooltip" data-show id="identifier" role="tooltip" style="position: absolute; left: 0; top: 0; margin: 0;">
    blu
    <div class="mg-tooltip__arrow" data-popper-arrow style="position: absolute;"></div>
  </div>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'focus', eventOut: 'blur' }, leave with %s element 3`] = `
<mg-tooltip>
  <!---->
  <mg-icon aria-describedby="identifier" tabindex="0">
    <mock:shadow-root>
      <svg aria-hidden="true" class="mg-icon mg-icon--check-circle mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
        <path d="M15.33 8A7.33 7.33 0 1 1 8 .67 7.33 7.33 0 0 1 15.33 8Zm-8.18 3.88 5.44-5.44a.46.46 0 0 0 0-.65l-.67-.67a.48.48 0 0 0-.67 0L6.82 9.54 4.75 7.47a.46.46 0 0 0-.65 0l-.67.67a.46.46 0 0 0 0 .65l3.07 3.07a.46.46 0 0 0 .65 0Z" fill="currentColor"></path>
      </svg>
    </mock:shadow-root>
  </mg-icon>
  <div class="mg-tooltip" data-show id="identifier" role="tooltip" style="position: absolute; left: 0; top: 0; margin: 0;">
    blu
    <div class="mg-tooltip__arrow" data-popper-arrow style="position: absolute;"></div>
  </div>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'focus', eventOut: 'blur' }, leave with %s element 4`] = `
<mg-tooltip>
  <!---->
  <mg-button>
    <!---->
    <button aria-describedby="identifier" class="mg-button mg-button--primary" id="identifier-mg-button">
      <div class="mg-button__content">
        mg-button
      </div>
    </button>
  </mg-button>
  <div class="mg-tooltip" data-show id="identifier" role="tooltip" style="position: absolute; left: 0; top: 0; margin: 0;">
    blu
    <div class="mg-tooltip__arrow" data-popper-arrow style="position: absolute;"></div>
  </div>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'mouseenter', eventOut: 'mouseleave' }, leave with %s element 1`] = `
<mg-tooltip>
  <!---->
  <span aria-describedby="identifier" tabindex="0">
    span
  </span>
  <div class="mg-tooltip" data-show id="identifier" role="tooltip" style="position: absolute; left: 0; top: 0; margin: 0;">
    blu
    <div class="mg-tooltip__arrow" data-popper-arrow style="position: absolute;"></div>
  </div>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'mouseenter', eventOut: 'mouseleave' }, leave with %s element 2`] = `
<mg-tooltip>
  <!---->
  <button aria-describedby="blu identifier">
    button
  </button>
  <div class="mg-tooltip" data-show id="identifier" role="tooltip" style="position: absolute; left: 0; top: 0; margin: 0;">
    blu
    <div class="mg-tooltip__arrow" data-popper-arrow style="position: absolute;"></div>
  </div>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'mouseenter', eventOut: 'mouseleave' }, leave with %s element 3`] = `
<mg-tooltip>
  <!---->
  <mg-icon aria-describedby="identifier" tabindex="0">
    <mock:shadow-root>
      <svg aria-hidden="true" class="mg-icon mg-icon--check-circle mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
        <path d="M15.33 8A7.33 7.33 0 1 1 8 .67 7.33 7.33 0 0 1 15.33 8Zm-8.18 3.88 5.44-5.44a.46.46 0 0 0 0-.65l-.67-.67a.48.48 0 0 0-.67 0L6.82 9.54 4.75 7.47a.46.46 0 0 0-.65 0l-.67.67a.46.46 0 0 0 0 .65l3.07 3.07a.46.46 0 0 0 .65 0Z" fill="currentColor"></path>
      </svg>
    </mock:shadow-root>
  </mg-icon>
  <div class="mg-tooltip" data-show id="identifier" role="tooltip" style="position: absolute; left: 0; top: 0; margin: 0;">
    blu
    <div class="mg-tooltip__arrow" data-popper-arrow style="position: absolute;"></div>
  </div>
</mg-tooltip>
`;

exports[`mg-tooltip Should manage display on events enter with { eventIn: 'mouseenter', eventOut: 'mouseleave' }, leave with %s element 4`] = `
<mg-tooltip>
  <!---->
  <mg-button>
    <!---->
    <button aria-describedby="identifier" class="mg-button mg-button--primary" id="identifier-mg-button">
      <div class="mg-button__content">
        mg-button
      </div>
    </button>
  </mg-button>
  <div class="mg-tooltip" data-show id="identifier" role="tooltip" style="position: absolute; left: 0; top: 0; margin: 0;">
    blu
    <div class="mg-tooltip__arrow" data-popper-arrow style="position: absolute;"></div>
  </div>
</mg-tooltip>
`;

exports[`mg-tooltip Should render with element 1`] = `
<mg-tooltip>
  <!---->
  <span aria-describedby="identifier" tabindex="0">
    span
  </span>
  <div class="mg-tooltip" id="identifier" role="tooltip" style="position: absolute; left: 0; top: 0; margin: 0;">
    My tooltip message
    <div class="mg-tooltip__arrow" data-popper-arrow style="position: absolute;"></div>
  </div>
</mg-tooltip>
`;

exports[`mg-tooltip Should render with element 2`] = `
<mg-tooltip>
  <!---->
  <button aria-describedby="blu identifier">
    button
  </button>
  <div class="mg-tooltip" id="identifier" role="tooltip" style="position: absolute; left: 0; top: 0; margin: 0;">
    My tooltip message
    <div class="mg-tooltip__arrow" data-popper-arrow style="position: absolute;"></div>
  </div>
</mg-tooltip>
`;

exports[`mg-tooltip Should render with element 3`] = `
<mg-tooltip>
  <!---->
  <mg-icon aria-describedby="identifier" tabindex="0">
    <mock:shadow-root>
      <svg aria-hidden="true" class="mg-icon mg-icon--check-circle mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
        <path d="M15.33 8A7.33 7.33 0 1 1 8 .67 7.33 7.33 0 0 1 15.33 8Zm-8.18 3.88 5.44-5.44a.46.46 0 0 0 0-.65l-.67-.67a.48.48 0 0 0-.67 0L6.82 9.54 4.75 7.47a.46.46 0 0 0-.65 0l-.67.67a.46.46 0 0 0 0 .65l3.07 3.07a.46.46 0 0 0 .65 0Z" fill="currentColor"></path>
      </svg>
    </mock:shadow-root>
  </mg-icon>
  <div class="mg-tooltip" id="identifier" role="tooltip" style="position: absolute; left: 0; top: 0; margin: 0;">
    My tooltip message
    <div class="mg-tooltip__arrow" data-popper-arrow style="position: absolute;"></div>
  </div>
</mg-tooltip>
`;

exports[`mg-tooltip Should render with element 4`] = `
<mg-tooltip>
  <!---->
  <mg-button>
    <!---->
    <button aria-describedby="identifier" class="mg-button mg-button--primary" id="identifier" style="position: absolute; left: 0; top: 0; margin: 0;">
      <div class="mg-button__content">
        mg-button
      </div>
    </button>
  </mg-button>
  <div class="mg-tooltip" id="identifier" role="tooltip">
    My tooltip message
    <div class="mg-tooltip__arrow" data-popper-arrow></div>
  </div>
</mg-tooltip>
`;

exports[`mg-tooltip Should toogle tooltip from prop display, case display false 1`] = `
<mg-tooltip>
  <!---->
  <span aria-describedby="identifier" tabindex="0">
    batman
  </span>
  <div class="mg-tooltip" id="identifier" role="tooltip" style="position: absolute; left: 0; top: 0; margin: 0;">
    batman
    <div class="mg-tooltip__arrow" data-popper-arrow style="position: absolute;"></div>
  </div>
</mg-tooltip>
`;

exports[`mg-tooltip Should toogle tooltip from prop display, case display false 2`] = `
<mg-tooltip>
  <!---->
  <span aria-describedby="identifier" tabindex="0">
    batman
  </span>
  <div class="mg-tooltip" data-show id="identifier" role="tooltip" style="position: absolute; left: 0; top: 0; margin: 0;">
    batman
    <div class="mg-tooltip__arrow" data-popper-arrow style="position: absolute;"></div>
  </div>
</mg-tooltip>
`;

exports[`mg-tooltip Should toogle tooltip from prop display, case display true 1`] = `
<mg-tooltip>
  <!---->
  <span aria-describedby="identifier" tabindex="0">
    batman
  </span>
  <div class="mg-tooltip" data-show id="identifier" role="tooltip" style="position: absolute; left: 0; top: 0; margin: 0;">
    batman
    <div class="mg-tooltip__arrow" data-popper-arrow style="position: absolute;"></div>
  </div>
</mg-tooltip>
`;

exports[`mg-tooltip Should toogle tooltip from prop display, case display true 2`] = `
<mg-tooltip>
  <!---->
  <span aria-describedby="identifier" tabindex="0">
    batman
  </span>
  <div class="mg-tooltip" id="identifier" role="tooltip" style="position: absolute; left: 0; top: 0; margin: 0;">
    batman
    <div class="mg-tooltip__arrow" data-popper-arrow style="position: absolute;"></div>
  </div>
</mg-tooltip>
`;
